# synthquant

./: .coverage  .gitignore  LICENSE  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml  release.yml
dashboard/: app.py  plots.py
docs/: architecture.md  getting_started.md
examples/: 01_data_ingestion.py  02_regime_detection.py  03_volatility_modeling.py  04_monte_carlo_simulation.py  05_risk_analytics.py  06_full_pipeline.py
synthquant/: __init__.py  config.py
synthquant/analytics/: __init__.py  distributions.py  moments.py  options.py  risk_metrics.py  scoring.py
synthquant/api/: __init__.py  schemas.py  server.py  websocket.py
synthquant/data/: __init__.py  features.py  ingest.py  storage.py
synthquant/models/: __init__.py  calibration.py  garch.py  jump_diffusion.py  rough_vol.py  stochastic_vol.py
synthquant/regime/: __init__.py  clustering.py  ensemble.py  hmm.py  ms_garch.py
synthquant/simulation/: __init__.py  correlation.py  gpu_engine.py  variance_reduction.py
synthquant/simulation/engines/: __init__.py  base.py  gbm.py  heston.py  merton_jd.py  regime_switching.py  rough_bergomi.py
synthquant/strategy/: __init__.py  allocation.py  backtest.py  hedging.py  signals.py  sizing.py
tests/: conftest.py
tests/test_analytics/: test_distributions.py  test_moments.py  test_options.py  test_risk_metrics.py  test_scoring.py
tests/test_api/: test_schemas.py
tests/test_data/: test_features.py  test_ingest.py
tests/test_models/: test_garch.py  test_jump_diffusion.py  test_stochastic_vol.py
tests/test_regime/: test_clustering.py  test_ensemble.py  test_hmm.py
tests/test_simulation/: test_correlation.py  test_engines.py  test_gbm.py  test_heston.py  test_merton_jd.py  test_regime_switching.py  test_variance_reduction.py
tests/test_strategy/: test_allocation.py  test_backtest.py  test_signals.py  test_sizing.py
