[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synthquant"
version = "0.1.0"
description = "Production-grade synthetic financial data generation & probabilistic forecasting platform"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Andrew See" }]
keywords = ["quantitative finance", "monte carlo", "regime detection", "stochastic volatility", "synthetic data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "polars>=0.19",
    "arch>=6.0",
    "hmmlearn>=0.3",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
bayesian = ["pymc>=5.0", "arviz>=0.16", "numpyro>=0.13"]
gpu = ["jax[cuda12_pip]>=0.4", "cupy-cuda12x>=12.0"]
api = ["fastapi>=0.104", "uvicorn[standard]>=0.24", "websockets>=12.0"]
dashboard = ["streamlit>=1.28", "plotly>=5.17"]
data = ["yfinance>=0.2", "requests>=2.31"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.6",
    "pre-commit>=3.5",
    "pandas-stubs>=2.0",
    "types-requests>=2.31",
]
all = [
    "synthquant[bayesian]",
    "synthquant[api]",
    "synthquant[dashboard]",
    "synthquant[data]",
]

[project.urls]
Homepage = "https://github.com/AndrewFSee/synthquant"
Repository = "https://github.com/AndrewFSee/synthquant"
Documentation = "https://github.com/AndrewFSee/synthquant/tree/main/docs"
"Bug Tracker" = "https://github.com/AndrewFSee/synthquant/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]
"examples/*" = ["ANN", "T201"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=synthquant --cov-report=term-missing --cov-report=xml -v"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
]

[tool.coverage.run]
source = ["synthquant"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise NotImplementedError", "if TYPE_CHECKING:"]
